NIHVIVO-193 Fix styles on year inputs so they don't collapse into label on smaller screen sizes.

--- a/productMods/edit/forms/css/customForm.css
+++ b/productMods/edit/forms/css/customForm.css
@@ -45,13 +45,14 @@
 
 
 /* #content form p.inline span,*/
-#content form p.inline input {
-    float: right;
-    clear: right;
+#content form p.inline input,
+#content form p.inline label {
+    float: left;
+    clear: left;
 }
 
 #content form p.inline.year input {
-    margin-right: 46em;
+    margin-left: 12em;
     margin-top: -1.75em;
 }
 
